--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                 <li>Git and Github</li>
                 <li>Basic <aabr title="Hypertext Markup Language ">HTML</aabr></li>
             </ul>
+            <p>next week we will learn:</p>
+            <ul>
+                <li>Grid</li>
+                <li>Flexbox</li>
+            </ul>
        </main>
 
 
